[metadata]
name = python-blogclient
summary = Blog Client Library
description-file = README.md
#license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    #License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org

[files]
packages =
    blogclient

[entry_points]
console_scripts =
    blog = blogclient.shell:main

[nosetests]
cover-package = blogclient

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
